upload Day6 homework.

--- a/datawhaleDay6_python基础.ipynb
+++ b/datawhaleDay6_python基础.ipynb
@@ -999,14 +999,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1、实现random.sample方法'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 16, 19, 20]\n"
+      "[0, 18, 5, 14]\n"
      ]
     }
    ],
@@ -1022,7 +1032,7 @@
     "        temp2 = list(set(temp))\n",
     "        if len(temp2) >= k:\n",
     "            break\n",
-    "    return temp2[:k]\n",
+    "    return temp2\n",
     "\n",
     "print(get_random_sample(range(20),4))"
    ]
